overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,12 @@
     font-style: normal;
 }
 
+body {
+    overflow-x: hidden;
+    width: 100%;
+    position: relative;
+  }
+
 /* ==========================================================================
    TYPOGRAPHY
    ========================================================================== */
